--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,123 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
+.top {
 
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
+}
+.topTitleBox {
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
+.topTitleBox h1 {
+  font-size: 3rem;
+  line-height: 1;
+  margin-bottom: 1rem;
 }
-
-.main {
+.topSubTitleBox{
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.searchBox {
+  margin-bottom: 1rem;
+}
+.searchBox >input {
+  padding:  0.5rem 1rem;
+  border-width: 1px;
+  border-radius: .375rem;
+   width: 100%;
+  box-sizing: border-box;
+}
+.bookBox {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-bottom: 3rem;
 }
+.book {
+  width: 10rem;
+  height: 14rem;
+  border: 1px solid #fff;
+  padding: 2rem 2rem 3rem;
+  position: relative;
+  border-radius: 0.5rem;
 
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
 }
+.bookLineFirst{
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 0.65rem;
+  top: 0;
+  bottom: 0;
+  background: rgb(64,64,64);
 
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
 }
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
+.bookLineSecond{
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 1.3rem;
+  top: 0;
+  bottom: 0;
+  background: rgb(64,64,64);
+}
+.face {
+  padding: 0.75rem 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
   font-weight: 600;
+  word-break: keep-all;
+  background: red;
+  width: 100%;
+  height: 100%;
+  font-size: 1rem;
 }
 
-.ctas {
+.postList {
+ display: grid;
+  margin: 3rem 0;
+  width: 100%;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.post {
+  width: 100%;
+  background: #fff;
+  padding: 1rem 0;
+}
+.post h2 {
+  line-height: 1.75rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.post p {
+  margin-top: .25rem;
+  font-size: 1rem;
+  color:rgb(163,163,63);
+  margin-bottom: 1rem;
+}
+.postInfo {
+  width: 100%;
   display: flex;
-  gap: 16px;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
+.tags {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
+  flex-direction: row;
+  gap: 0.7rem
+
 }
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
+.tags > span {
+  font-size: 0.75rem;
+  padding: 0.2rem 0.5rem;
+  background: red;
+  border-radius: 0.5rem;
+  font-size: 1rem;
 }
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.date span {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  border: 0 solid #e5e7eb;
 }
