--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,86 +1,78 @@
-
 .titleBox {
-    margin-bottom: 1rem;
-    border-bottom: 3px solid black;
-    text-align: center;
+  margin-bottom: 1rem;
+  border-bottom: 3px solid black;
+  text-align: center;
 }
 .titleBox h1 {
-    font-size: 3rem;
-    line-height: 1;
-    font-weight: 800;
-    text-align: center;
-    letter-spacing: -.025em;
-    max-width: 48rem;
-    margin: 0 auto 1rem;
-
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 800;
+  text-align: center;
+  letter-spacing: -0.025em;
+  max-width: 48rem;
+  margin: 0 auto 1rem;
 }
 
 .titleBox .date {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap:1rem;
-    font-size: .75rem;
-    line-height: 1rem;
-    margin: 0 auto 1rem;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  margin: 0 auto 1rem;
 }
 
 .bottom {
-    display: flex;
-    gap: 2rem;
-;
+  display: flex;
+  gap: 2rem;
 }
 .bottom .content {
-    max-width: 48rem;
-    width: 100%;
-    font-size: 1rem;
-    line-height: 1.75;
-    background: red;
-    min-height: 1800px;
+  max-width: 48rem;
+  width: 100%;
+  font-size: 1rem;
+  line-height: 1.75;
 }
 .bottom .said {
-    margin-top: 3rem;
-    margin-left: auto;
-
+  margin-top: 3rem;
+  margin-left: auto;
 }
 .bar {
-    border-width: 1px;
-    border-color: rgb(38,38,38);
-    border-radius: .75rem;
-    overflow: hidden;
-    max-width: 260px;
-    min-width: 240px;
-    position: sticky;
-background: orange;
-    top: 120px;
-    padding: 1rem;
+  border-width: 1px;
+  border-color: rgb(38, 38, 38);
+  border-radius: 0.75rem;
+  overflow: hidden;
+  max-width: 260px;
+  min-width: 240px;
+  position: sticky;
+  background: orange;
+  top: 120px;
+  padding: 1rem;
 }
 .bar p {
-    font-weight: 800;
-    font-size: 1.2rem;
-    line-height: 1.5rem;
+  font-weight: 800;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
 }
 .bar ul {
-    list-style: none;
-    margin: .5rem 0 0;
-    padding: 0;
-    font-size: 1rem;
-    line-height: 1.25rem;
-
+  list-style: none;
+  margin: 0.5rem 0 0;
+  padding: 0;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 .btns {
-    padding: .5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 .btns button {
-    width: 2.25rem;
-    height: 2.25rem;
-    display: flex;
-    border-radius: .5rem;
+  width: 2.25rem;
+  height: 2.25rem;
+  display: flex;
+  border-radius: 0.5rem;
 }
 .btns button:first-child {
-    margin-right: auto;
+  margin-right: auto;
 }
