--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
-@import "tailwindcss";
-
+@import 'tailwindcss';
 /* @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
